IDEA-315915 [java]: cleanup
GitOrigin-RevId: fa79d87a6cec6b02aae8893b058ac6197aa38c44